# evolution-plugin-patch

./: .clang-format  CMakeLists.txt  README.adoc  build-and-install-as-user  cmake_uninstall.cmake.in
debian/: changelog  control
src/: CMakeLists.txt  xpatch-module.c  xpatch-parser.c  xpatch-parser.h
